- init renamed to preRender following framework update - z-index issue on pop-up fixed

--- a/less/hotgraphic.less
+++ b/less/hotgraphic.less
@@ -31,7 +31,7 @@
     height: auto;
     margin: 40px;
     background-color: @background-color;
-    z-index: 299;
+    z-index: 500;
   }
 
   .hotgraphic-popup-toolbar {
